--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<h4>Suraj Bhandarkar </h4>
+				<h2>Suraj Bhandarkar </h2>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
@@ -60,11 +60,7 @@
 		</div>
 	</nav>
 <div id ="home">
-	<img src="img/desktop1.png"  class="film-background">
-	<center><iframe width="410" height="220" top="100px"
-src="https://www.youtube.com/embed/uPDmj_8OaYo"></iframe></center>
-	
-
+	<img src="img/desktop1.png"  class="banner">
 </div>
 
 <div id="about" class="container-fluid text-center">
