--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			</div>
 	</div>
 	</div>
-	<img src="img/laptops.png" class="banner">
+	<img src="img/Laptops.png" class="banner">
 
 	<div id="world" class="container-fluid text text-center">
 		<h1>Skills</h1>
