--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 			<br>
 			<div class="social">
 				<a href="https://www.facebook.com/suraj.bhandarkar.7" target="_blank"><i class="fab fa-facebook"></i></a>
-					<a href=https://twitter.com/bhandarkar13" target="_blank"><i class="fab fa-twitter"></i></a>
+					<a href=https://twitter.com/bhandarkar13 target="_blank"><i class="fab fa-twitter"></i></a>
 						<a href="https://www.instagram.com/suraj_soul__sbs/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
 							<a href="" target="_blank"><i class="fab fa-steam"></i></a>
 								
