--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 					<li><a href="#world">Skills</a></li>
 					<li><a href="#Education">Education</a></li>
 					<li><a href="#connect">Connect</a></li>
+					<li><a href="Gallery.html">Gallery</a></li>
 				</ul>
 			</div>
 		</div>
