--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 <br><br>
 <br><br>
 				Into Developing Games, Application and Algorithms.
+				<a href="Gallery.html">
+				<div class="Gallery"><font color="#673ab7">	Check Out My Art Here.</font></div>
+				</a>
 						
 			</p>
 		</div>
