--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p>
-				Hi, and welcome to my website. My name is Suraj Bhandarkar  and I am currently 
-				pursuing my B.E in Computer Science & Engineering at 
-				Canara Engineering College.
+				He, and welcome to my website. My name is Suraj Bhandarkar. Welcome to my Webpage.
 <br><br>
 <br><br>
 				Into Developing Games, Application and Algorithms.
