--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p>
-				He, and welcome to my website. My name is Suraj Bhandarkar. Welcome to my Webpage.
+				Hello, and welcome to my website. My name is Suraj Bhandarkar. Welcome to my Webpage.
 <br><br>
 <br><br>
 				Into Developing Games, Application and Algorithms.
